--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>Tracy's Portfolio</title>
 
     <!-- Bootstrap core CSS Modules-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./tools/font-awesome/css/font-awesome.min.css">
     <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./tools/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./tools/font-awesome/css/font-awesome.min.css">
     <link href="./tools/animate.css">
 
     <!-- Fonts -->
@@ -31,32 +33,14 @@
     <!-- Navbar -->
     <nav id="header" class="navbar navbar-fixed-top">
         <div id="header-container" class="container-fluid navbar-container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
             <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#aboutMe">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">Resume</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact Me</a>
-                    </li>
-                </ul>
+                    <form class="form-inline">
+                        <a class="nav-item nav-link" href="#">Home</a>
+                        <a class="nav-item nav-link" href="#aboutMe">About Me</a>
+                        <a class="nav-item nav-link" href="#projects">Projects</a>
+                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">Resume</a>
+                        <a class="nav-item nav-link" href="#contact">Contact Me</a>
+                    </form>      
             </div>
             <!-- /.nav-collapse -->
         </div>
@@ -135,8 +119,8 @@
     <br>
     <!-- Portfolio   -->
     <div id="projects"></div>
+    <hr>
     <section class="wow slideInRight" data-wow-duration="2s" data-wow-delay="0.001s">
-        <hr>
         <br>
         <div class="container-fluid">
             <div class="row">
@@ -148,40 +132,66 @@
         <br>
         <!-- CSS Creature -->
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img class="bunny" img src="./assets/bunny.jpg" />
-                        <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
-                            <h3 style="text-align: center">CSS Creature</h3>
-                        </a>
+            <div class="card-deck">
+                <div class="col-md-4">
+                    <div class="card h-100 cardStyle">
+
+                        <img class="card-img-top" src="./assets/bunny.jpg" alt="Card image cap" />
+                        <div class="card-body">
+                            <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
+                                <h3 class="card-title">CSS Creature</h3>
+                            </a>
+                            <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.
+                                This content is a little bit longer.</p> -->
+                        </div>
+
                     </div>
                 </div>
+                <br/>
                 <!-- Storefront -->
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img class="storefront" img src="./assets/VN-storefront.jpg" />
-                        <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
-                            <h3 style="text-align: center">Storefront</h3>
-                        </a>
+                <div class="col-md-4">
+                    <div class="card h-100 cardStyle">
+
+                        <img class="card-img-top" src="./assets/VN-storefront.jpg" alt="Card image cap" />
+                        <div class="card-body">
+                            <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
+                                <h3>Storefront</h3>
+                            </a>
+                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                        </div>
+
                     </div>
                 </div>
+
+                <br/>
                 <!-- API project  -->
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img class="API" img src="./assets/API.jpg" />
-                        <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
-                            <h3 style="text-align: center">API Project</h3>
-                        </a>
+                <div class="col-md-4">
+                    <div class="card h-100 cardStyle">
+
+                        <img class="card-img-top" src="./assets/API.jpg" alt="Card image cap" />
+                        <div class="card-body">
+                            <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
+                                <h3>API Project</h3>
+                            </a>
+                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                        </div>
+
                     </div>
                 </div>
+                <br/>
                 <!-- JS Library -->
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img class="JSrepo" img src="./assets/github.jpg" />
-                        <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                            <h3 style="text-align: center">GitHub</h3>
-                        </a>
+                <div class="col-md-4">
+                    <div class="card h-100 cardStyle">
+
+                        <img class="card-img-top" img src="./assets/github.jpg" alt="Card image cap" />
+
+                        <div class="card-body">
+                            <a href="https://github.com/tdesserich" target="blank" style="color: green">
+                                <h3>GitHub</h3>
+                            </a>
+                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -246,7 +256,7 @@
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-md-12">
-                <div class="text-center text-md-right">
+                <div class="text-align-center">
                     <ul class="list-unstyled list-inline">
                         <li>
                             <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">
@@ -267,9 +277,12 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <p> © Copyright 2018 tdesserich </p>
-        </div>
+            <div class="row">
+                <div class="col-md-12 text-align-center">
+                    <p>© Copyright 2018 tdesserich</p>
+                </div>
+            </div>
+            
     </div>
     <!--/Footer-->
 
